2008-07-14  Neil Roberts  <neil@o-hand.com>

	* clutter/rbcogloffscreen.c: 
	* clutter/extconf.rb: 
	* clutter/rbclutter.c: Add wrappers for the Cogl FBO API.

	* clutter/rbcogltexture.h: 
	* clutter/rbcogltexture.c (rb_cogl_texture_get_handle): Made the
	get handle function public.

2008-07-14  Neil Roberts  <neil@o-hand.com>

	* clutter/rbcoglshader.h: 
	* clutter/rbcoglshader.c: 
	* clutter/rbcoglprogram.c: 
	* clutter/rbclutter.c: 
	* clutter/extconf.rb: Add wrappers for the Cogl shader and
	program API

	* clutter/rbcoglconsts.c: 
	* extra/mkcoglconsts.rb: Include Cogl constants that are wrappers
	for GL constants ending in *_ARB.

2008-07-14  Neil Roberts  <neil@o-hand.com>

	* clutter/rbclutter.c (rbclt_num_to_angle): New helper function to
	* clutter/rbclutter.h: 
	convert a ruby value to a ClutterAngle

	* clutter/extconf.rb: 
	* clutter/rbcoglprimitives.c: Added wrappers for the Cogl
	primitives API.

2008-07-14  Neil Roberts  <neil@o-hand.com>

	* clutter/rbclutter.h: 
	* clutter/rbclutter.c: Added wrapper functions for converting from
	Ruby values to ClutterFixed or ClutterUnit that avoid going
	through a double of the VALUE is a fixed number.

	* clutter/rbcogltexture.c: 
	* clutter/rbcogl.c: 
	* clutter/mkboxedtype.rb: Use the new wrapper for converting to
	ClutterFixed and ClutterUnit

2008-07-13  Neil Roberts  <neil@o-hand.com>

	* clutter/rbcogltexture.c: 
	* clutter/extconf.rb: 
	* clutter/rbclutter.c: Add wrappers for the Cogl texture API.

	* extra/mkcoglconsts.rb: Only include constants that are defined
	to a GL_* value with the same name to avoid including #ifdef'd out
	constants.

	* clutter/rbcoglconsts.c: Remove duplicates and add some missing
	constants.

2008-07-11  Neil Roberts  <neil@o-hand.com>

	* clutter/extconf.rb: Increase the required Clutter version to 0.8

2008-07-11  Neil Roberts  <neil@o-hand.com>

	* clutter/rbcogl.c: Fix included headers

2008-07-10  Neil Roberts  <neil@o-hand.com>
